base/src/test/resources/failure/scope/prim-dependency.aya.txt
In file $FILE:1:5 ->

  1 | prim left
           ^--^
  2 | prim right

Error: The prim `left` depends on undeclared prims: `I`

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
